# GameOfLife

./: CMakeLists.txt  README.md  config.cfg  constants.h  game.cpp  game.h  main.cpp  olcPixelGameEngine.h
.github/workflows/: cmake.yml
